# avEngineIMGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StaticPlugins.h
.github/workflows/: build.yml
cmake/: AvImguiGitVersion.h.in  AvImguiPlugin.cmake  distributionPlugin.cmake  distributionREADME.md
examples/: avSetup.cfg  debugTools.nut
native/: CMakeLists.txt
native/plugin/: CMakeLists.txt
native/plugin/src/: AvImguiPlugin.cpp  AvImguiPlugin.h  Versions.h
native/plugin/src/Compositor/: CompositorPassImgui.cpp  CompositorPassImgui.h  CompositorPassImguiDef.h  CompositorPassImguiProvider.cpp  CompositorPassImguiProvider.h
native/plugin/src/ImguiOgre/: ImguiManager.cpp  ImguiManager.h  ImguiRenderable.cpp  ImguiRenderable.h
native/plugin/src/Input/: ImguiInput.cpp  ImguiInput.h
native/plugin/src/Scripting/: ImguiConstants.cpp  ImguiNamespace.cpp  ImguiNamespace.h
test/: avSetupBase.cfg  avTests.cfg  testSetup.nut
test/integration/Api/Constants/: Constants.nut  avSetup.cfg
test/integration/Api/Errors/: Errors.nut  avSetup.cfg
test/integration/Api/Items/: Items.nut  avSetup.cfg
test/integration/Api/Layout/: Layout.nut  avSetup.cfg
test/integration/Api/Menus/: Menus.nut  avSetup.cfg
test/integration/Api/Misc/: Misc.nut  avSetup.cfg
test/integration/Api/Plots/: Plots.nut  avSetup.cfg
test/integration/Api/Popups/: Popups.nut  avSetup.cfg
test/integration/Api/Smoke/: Smoke.nut  avSetup.cfg
test/integration/Api/Style/: Style.nut  avSetup.cfg
test/integration/Api/Tables/: Tables.nut  avSetup.cfg
test/integration/Api/Text/: Text.nut  avSetup.cfg
test/integration/Api/Trees/: Trees.nut  avSetup.cfg
test/integration/Api/Values/: Values.nut  avSetup.cfg
test/integration/Api/Widgets/: Widgets.nut  avSetup.cfg
test/integration/Api/Windows/: Windows.nut  avSetup.cfg
